Build / Move to JDK17+.
Done using org.openrewrite.java.migrate.UpgradeToJava17.